--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "material-symbols": "^0.14.7",
     "next": "14.1.0",
     "prettier": "^3.2.5",
     "react": "^18",
