--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "material-symbols": "^0.14.7",
     "next": "14.1.0",
     "prettier": "^3.2.5",
