--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "lodash": "^4.17.21",
     "material-symbols": "^0.14.7",
     "next": "14.1.0",
+    "nuqs": "^1.16.1",
     "prettier": "^3.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "tiny-invariant": "^1.3.1"
+    "tiny-invariant": "^1.3.1",
+    "use-debounce": "^10.0.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
