generate schema types

--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "lint": "next lint",
+    "schema-generate": "supabase gen types typescript --project-id qsfwkcrawusebbsdkimj > api/schema.types.ts",
+    "start": "next start"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
