--- a/package.json
+++ b/package.json
@@ -36,5 +36,6 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
