--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,14 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
 .yarn/install-state.gz
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
 
 # testing
 /coverage
