--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,8 @@
 
 # dependencies
 /node_modules
-.yarn/install-state.gz
-.pnp.*
 .yarn/*
+!.yarn/cache
 !.yarn/patches
 !.yarn/plugins
 !.yarn/releases
