--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
+    "date-fns": "^3.4.0",
     "lodash": "^4.17.21",
     "material-symbols": "^0.14.7",
     "next": "14.1.0",
