--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.3",
     "date-fns": "^3.4.0",
+    "html-react-parser": "^5.1.8",
     "lodash": "^4.17.21",
     "material-symbols": "^0.14.7",
     "next": "14.1.0",
